# C-Compiler

./: CMakeLists.txt  main.cpp  readme.md
DragonIR/: IRCode.cpp  IRCode.h  IRGenerator.cpp  IRGenerator.h  IRInst.cpp  IRInst.h
common/: Common.cpp  Common.h  Function.cpp  Function.h  SymbolGenerator.cpp  SymbolGenerator.h  SymbolTable.cpp  SymbolTable.h  Value.cpp  Value.h  ValueType.h
frontend/: AST.cpp  AST.h  FrontEndExecutor.h  Graph.cpp  Graph.h
frontend/flexbison/: BisonParser.h  FlexBisonExecutor.cpp  FlexBisonExecutor.h  FlexLexer.h  Minic.l  Minic.y
frontend/flexbison/autogenerated/: minicbison.cpp  minicbison.h  minicflex.cpp  minicflex.h
output_dir/: ir.txt
tests/: test.c
